# uls

./: .clang-format  .gitignore  CMakeLists.txt  README.md  autocomplete.cpp  compile.sh  declarations.cpp  getlibs.sh  highlight.cpp  main.cpp  renaming.cpp  server.cpp  system.cpp  utap_extension.cpp  utap_extension.h
.github/workflows/: build-test.yml
cmake/: doctest.cmake  nlohmann.cmake  utap.cmake
include/uls/: autocomplete.h  common_data.h  declarations.h  highlight.h  renaming.h  serialization.h  server.h  server_module.h  system.h  utap_extension.h
src/: CMakeLists.txt  autocomplete.cpp  common_data.cpp  declarations.cpp  highlight.cpp  main.cpp  renaming.cpp  server.cpp  system.cpp  utap_extension.cpp
test/: CMakeLists.txt  server_mock.h  test_autocomplete.cpp  test_declarations.cpp  test_highlight.cpp  test_renaming.cpp  test_server.cpp
toolchains/: clang.cmake  gcc10.cmake  gcc11.cmake  gcc12.cmake  gcc13.cmake  macos64-brew.cmake  mingw-w64_toolchain.cmake  x86_64-w64-mingw32.cmake
